Module4-5/GatewayAPI-Ingress/gateway.yaml
# gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hello-gateway
  namespace: default
spec:
  gatewayClassName: nginx   # must match GatewayClass name above
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same  # only allow HTTPRoutes from this namespace
