Module4-5/GatewayAPI-Ingress/httproute.yaml
# httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-route
  namespace: default
spec:
  parentRefs:
  - name: hello-gateway   # binds to our Gateway
  hostnames:
  - "hello.example.com"   # optional: remove to match all hostnames
  rules:
  - matches:
  # curl -H "Host: hello.example.com" http://$GW_IP/hello
    - path:
        type: PathPrefix
        value: /hello
    backendRefs:
    - name: hello-world-svc
      port: 80
  - matches:
  # curl -H "Host: hello.example.com" http://$GW_IP/
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hello-world-svc
      port: 80
